# complementary-dynamics-rewrite

./: CMakeLists.txt  main.cpp
include/: complementary_displacement.h  lbs_rig_jacobian.h  linear_elasticity.h  rig_jacobian.h  types.h
src/: complementary_displacement.cpp  lbs_rig_jacobian.cpp  linear_elasticity.cpp  rig_jacobian.cpp
